<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.fragments.login.FragmentLogin">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <!--  header Image  -->
        <ImageView
            android:id="@+id/leftCircle"
            android:layout_width="@dimen/_95mdp"
            android:layout_height="@dimen/_95mdp"
            android:scaleType="fitStart"
            android:src="@drawable/ic_left_circle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/rightCircle"
            android:layout_width="@dimen/_95mdp"
            android:layout_height="@dimen/_95mdp"
            android:scaleType="fitEnd"
            android:src="@drawable/ic_right_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/_120mdp"
            android:layout_height="@dimen/_59mdp"
            android:layout_marginTop="@dimen/_92mdp"
            android:src="@drawable/splash_logo"
            app:layout_constraintEnd_toStartOf="@id/rightCircle"
            app:layout_constraintStart_toEndOf="@id/leftCircle"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <!--   error message     -->
        <TextView
            android:id="@+id/tvWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25mdp"
            android:layout_marginBottom="@dimen/_5mdp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:text="@string/the_password_or_username_is_incorrect"
            android:textColor="@color/red_text_color"
            android:textSize="@dimen/_12font_mdp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_15mdp"
            app:layout_constraintTop_toBottomOf="@id/tvWarning">
            <!--  Title  -->
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16mdp"
                android:layout_marginTop="@dimen/_5mdp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/_16font_mdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--  userName Input  -->
            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48mdp"
                android:layout_marginHorizontal="@dimen/_16mdp"
                android:layout_marginTop="@dimen/_24mdp"
                android:background="@drawable/et_design"
                android:drawableStart="@drawable/ic_profile"
                android:drawablePadding="@dimen/_8mdp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/user_name"
                android:lines="1"
                android:paddingHorizontal="@dimen/_16mdp"
                android:textColor="@color/text_hint_color"
                android:textColorHint="@color/text_hint_color"
                android:textSize="@dimen/_14font_mdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                tools:ignore="Autofill,TextFields" />

            <!--     user name error message       -->
            <TextView
                android:id="@+id/tvUserNameWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8mdp"
                android:layout_marginBottom="@dimen/_5mdp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/the_user_name_is_empty_or_format_is_invalid"
                android:textColor="@color/red_text_color"
                android:textSize="@dimen/_9font_mdp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/etUserName"
                app:layout_constraintTop_toBottomOf="@id/etUserName" />


            <!--  Mail Input  -->
            <EditText
                android:id="@+id/etUserMail"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48mdp"
                android:layout_marginHorizontal="@dimen/_16mdp"
                android:layout_marginTop="@dimen/_12mdp"
                android:background="@drawable/et_design"
                android:drawableStart="@drawable/ic_sms"
                android:drawablePadding="@dimen/_8mdp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/email"
                android:lines="1"
                android:paddingHorizontal="@dimen/_16mdp"
                android:textColor="@color/text_hint_color"
                android:textColorHint="@color/text_hint_color"
                android:textSize="@dimen/_14font_mdp"
                android:visibility="visible"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvUserNameWarning"
                tools:ignore="Autofill,TextFields" />

            <!--     email error message       -->
            <TextView
                android:id="@+id/tvEmailWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8mdp"
                android:layout_marginBottom="@dimen/_5mdp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/the_email_entered_is_incorrect"
                android:textColor="@color/red_text_color"
                android:textSize="@dimen/_9font_mdp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/etUserName"
                app:layout_constraintTop_toBottomOf="@id/etUserMail" />

            <!--  password Input  -->
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48mdp"
                android:layout_marginHorizontal="@dimen/_16mdp"
                android:layout_marginTop="@dimen/_12mdp"
                android:background="@drawable/et_design"
                android:drawableLeft="@drawable/ic_key"
                android:drawablePadding="@dimen/_8mdp"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:lines="1"
                android:paddingHorizontal="@dimen/_16mdp"
                android:textColor="@color/text_hint_color"
                android:textColorHint="@color/text_hint_color"
                android:textSize="@dimen/_14font_mdp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEmailWarning"
                tools:ignore="Autofill,RtlHardcoded,TextFields" />


            <!--     password error message       -->
            <TextView
                android:id="@+id/tvPasswordWarning"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8mdp"
                android:layout_marginBottom="@dimen/_5mdp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/the_email_entered_is_incorrect"
                android:textColor="@color/red_text_color"
                android:textSize="@dimen/_9font_mdp"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/etUserName"
                app:layout_constraintTop_toBottomOf="@id/etPassword" />

            <!--  Login link  -->
            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_regular"
                android:paddingVertical="@dimen/_8mdp"
                android:text="@string/forgot_password"
                android:textColor="@color/purple"
                android:textSize="@dimen/_12font_mdp"
                app:layout_constraintRight_toRightOf="@id/etPassword"
                app:layout_constraintTop_toBottomOf="@id/tvPasswordWarning" />

            <!--  get start Button  -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnGetStartOrLogin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_48mdp"
                android:layout_marginHorizontal="@dimen/_16mdp"
                android:layout_marginTop="@dimen/_24mdp"
                android:background="@drawable/btn_purple"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/white_text_color"
                android:textSize="@dimen/_16font_mdp"
                app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />


            <!--  Login link  -->
            <TextView
                android:id="@+id/haveAccountOrNot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6mdp"
                android:paddingVertical="10dp"
                android:text="@string/dont_you_have_an_account"
                android:textColor="@color/white"
                android:textSize="@dimen/_12font_mdp"
                app:layout_constraintLeft_toLeftOf="@id/btnGetStartOrLogin"
                app:layout_constraintTop_toBottomOf="@id/btnGetStartOrLogin" />

            <TextView
                android:id="@+id/tvLinkLoginOrRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="@dimen/_6mdp"
                android:paddingVertical="10dp"
                android:text="@string/sign_up"
                android:textColor="@color/purple"
                android:textSize="@dimen/_12font_mdp"
                app:layout_constraintLeft_toRightOf="@id/haveAccountOrNot"
                app:layout_constraintTop_toBottomOf="@id/btnGetStartOrLogin"
                tools:ignore="RtlHardcoded" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone">
            <!--    disable background    -->
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.8"
                android:background="@color/background"
                tools:ignore="ContentDescription" />

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_10mdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.github.ybq.android.spinkit.SpinKitView
                    style="@style/SpinKitView.FoldingCube"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_15mdp"
                    app:SpinKit_Color="@color/white_text_color" />
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>